--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background: rgb(207, 215, 215);
+  background: #e1eef6;
   font-family: monospace;
   font-size: 20px;
   min-height: 100%;
@@ -17,10 +17,20 @@ body {
   list-style: none;
   width: auto;
   display: inline-flex;
+  padding-left: 0px;
 }
 
 .menu li {
+  color: #004e66;
+  margin-left: 10px;
   padding: 10px;
+  border: 1px solid #004e66;
+  border-radius: 5px;
+}
+/*#ff5f2e*/
+.menu li:hover {
+  background-color: #d9e1e8;
+  cursor: pointer;
 }
 
 .board-list {
@@ -30,7 +40,6 @@ body {
 }
 
 .textNote, .imageNote {
-  border: 1px solid black;
   width: 200px;
   padding: 10px;
   position: absolute;
