--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ body {
   height: 100%;
 }
 
-.menu {
+.menu ul {
   list-style: none;
   width: auto;
   display: inline-flex;
@@ -69,6 +69,7 @@ body {
 .textNote textarea {
   width: 100%;
   height: 75%;
+  -webkit-user-drag: none;
 }
 
 .textNote span {
@@ -94,16 +95,22 @@ body {
   position: absolute;
   background-color: white;
   box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2)
+  -webkit-user-drag: none;
 }
+
+.imageNoteEdit .url {
+  font-weight: 200;
+  margin: 0px;
+  cursor: -webkit-grabbing;
+}
+
 
 .imageNoteDisplay {
   position: absolute;
   background-color: white;
+  display: block;
+  height: 150px;
   box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2)
-}
-
-.imageNoteDisplay input {
-  width: 100%;
 }
 
 .imageNoteDisplay .image-edit {
@@ -113,22 +120,14 @@ body {
 }
 
 .imageNoteDisplay:hover > .image-edit {
-  padding-left: 5px;
+  padding-left: 10px;
   opacity: 1;
 }
 
-.imageNoteDisplay .drag-bar {
-  opacity: 0;
+.imageNoteDisplay strong {
+  height: 150px;
+  display: block;
 }
-
-/*
-.imageNoteDisplay .cursor {
-  font-size: 0px;
-}
-
-.imageNoteDisplay .cursor:hover {
-  font-size: 20px;
-}*/
 
 .imageNoteDisplay .drag-bar {
   opacity: 1;
