--- a/style/style.css
+++ b/style/style.css
@@ -53,7 +53,11 @@ body {
   padding: 5px 0px;
 }
 
-.textNote {
+.textNoteEditContainer {
+  position: absolute;
+}
+
+.textNoteEdit {
   font-size: 15px;
   width: 200px;
   padding: 10px;
@@ -62,50 +66,52 @@ body {
   box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2)
 }
 
-.textNote p {
+.textNoteEdit p {
   margin-top: 0px;
 }
 
-.textNote textarea {
+.textNoteEdit textarea {
   width: 100%;
   height: 75%;
   -webkit-user-drag: none;
 }
 
-.textNote span {
-  display: block;
-}
 
-.textNote span {
-  opacity: 0;
-}
 
-.textNote span:hover {
-  opacity: 1;
-  cursor: -webkit-grabbing;
-}
-
-.textNote:hover {
+.textNoteEdit:hover {
   cursor: grabbing;
 }
 
-.textNoteEdit {
+/*.textNoteEdit .github-picker {
   position: absolute;
-}
-
-
-
-.textNoteEdit .github-picker {
-  position: relative;
   padding: 5px;
   display: flex;
   flex-wrap: wrap;
   border: none;
-}
+}*/
 
-.textNoteEdit .color-picker {
+.textNoteEditContainer .colorPicker {
   float: right;
   margin-top: -35px;
+}
+
+.textNoteDisplay {
+  font-size: 15px;
+  width: 200px;
+  padding: 10px;
+  position: absolute;
+  background-color: white;
+  box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2)
+}
+
+.textNoteDisplay span {
+  opacity: 0;
+  display: block;
+}
+
+.textNoteDisplay span:hover {
+  opacity: 1;
+  cursor: -webkit-grabbing;
 }
 
 .imageNoteEdit {
