--- a/style/style.css
+++ b/style/style.css
@@ -65,7 +65,6 @@ body {
   font-weight: 600;
   margin-left: 8px;
   padding: 5px 0px;
-  /*max-width: 120px;*/
 }
 
 .noBoard {
@@ -123,8 +122,7 @@ body {
 
 .textNoteEditContainer .colorPicker {
   float: right;
-  margin-top: -35px;
-  padding-right: 5px;
+  margin-top: -32px;
 }
 
 .textNoteDisplay {
@@ -133,7 +131,7 @@ body {
   padding: 10px;
   position: absolute;
   background-color: white;
-  box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2)
+  box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, .2);
 }
 
 .textNoteDisplay span {
